feat: add back validation for duplicate calculations #42